@@ -1,6 +1,10 @@
 # ChangeLog file for sql/src/backends/monet5
 # This file is updated with mchangelog (Gentoo echangelog bastard script)
 
+  25 Sep 2009; Fabian Groffen <fabian@cwi.nl> monetdb.c:
+  Implemented global -q option to monetdb to suppress status messages when
+  performing commands
+
   25 Sep 2009; Fabian Groffen <fabian@cwi.nl> glob.c:
   Improved globbing to support escapes, such that the literal asterisk symbol
   can be matched using \*
